--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -10,7 +10,7 @@
     
     <style>
         body {
-            background-color: #c0bfb9;
+            background-color: #f5eee1;
         }
 
         hr {
@@ -48,7 +48,7 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: white;
+            background-color: #c0bfb9;
         }
 
         /* Modal Content */
