--- a/ReedHampton/Views/Images/Delete.cshtml
+++ b/ReedHampton/Views/Images/Delete.cshtml
@@ -6,7 +6,7 @@
 <head>
     <style>
         body {
-            background-color: #c0bfb9;
+            background-color: #f5eee1;
         }
 
         hr {
