--- a/ReedHampton/Views/Shared/_Layout.cshtml
+++ b/ReedHampton/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <style>
     #ContactMe {
-        margin-left: 580px;
+        margin-left: 575px;
     }
 </style>
 <html>
@@ -29,7 +29,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Development", "Portfolio", "DevelopmentProjects")</li>
                     <li>@Html.ActionLink("Documents", "DocumentPortfolio", "ProfessionalDocuments")</li>
-                    <li>@Html.ActionLink("Photos", "AlbumGallery", "Albums")</li>
+                    <li>@Html.ActionLink("Albums", "AlbumGallery", "Albums")</li>
                     <li id="ContactMe">@Html.ActionLink("Contact Me", "Index", "ContactInformation")</li>
                 </ul>
             </div>
