--- a/ReedHampton/Views/AboutMe/Edit.cshtml
+++ b/ReedHampton/Views/AboutMe/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <style>
     body {
-        background-color: #c0bfb9;
+        background-color: #f5eee1;
     }
 
     hr {
@@ -57,7 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
