--- a/ReedHampton/Views/Albums/AlbumGallery.cshtml
+++ b/ReedHampton/Views/Albums/AlbumGallery.cshtml
@@ -5,7 +5,11 @@
 }
 <style>
     body {
-        background-color: #c0bfb9;
+        background-color: #f5eee1;
+    }
+
+    #darken {
+        background-image: linear-gradient( rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35) ), url(../../StaticImages/Gallery.jpg);
     }
 
     hr {
@@ -34,7 +38,11 @@
 
 <body>
 
-    <h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px;">Photo Gallery</h1>
+    <div  class="jumbotron" id="darken" style="background-size:cover; margin-top:60px;">
+        <h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px; color:white;">Photo Gallery</h1>
+    </div>
+
+    <hr />
 
     @{
         if (User.Identity.IsAuthenticated)
