Made style changes to the Development Portfolio, added a few things to the model including a GitHub URL option and a Website URL option. Neitehr are required when creating an object. I am still working on styling the Portfolio Flipboards, main things left to include are the Short Descriptions on the front and the SkillsNeeded on the back of the FlipBoard.

--- a/ReedHampton/Views/DevelopmentProjects/Create.cshtml
+++ b/ReedHampton/Views/DevelopmentProjects/Create.cshtml
@@ -37,7 +37,7 @@
 
             <div class="form-group-lg">
                 @Html.LabelFor(m => m.ShortDescription, new { @class = "col-md-6 control-label" })
-                @Html.TextBoxFor(m => m.ShortDescription, new { @class = "form-control" })
+                @Html.TextAreaFor(m => m.ShortDescription, new { @class = "form-control" })
             </div>
 
             <br />
@@ -45,7 +45,7 @@
 
             <div class="form-group-lg">
                 @Html.LabelFor(m => m.LongName, new { @class = "col-md-6 control-label" })
-                @Html.TextBoxFor(m => m.LongName, new { @class = "form-control" })
+                @Html.TextAreaFor(m => m.LongName, new { @class = "form-control" })
             </div>
 
             <br />
@@ -53,7 +53,7 @@
 
             <div class="form-group-lg">
                 @Html.LabelFor(m => m.LongDescription, new { @class = "col-md-6 control-label" })
-                @Html.TextBoxFor(m => m.LongDescription, new { @class = "form-control" })
+                @Html.TextAreaFor(m => m.LongDescription, new { @class = "form-control" })
             </div>
 
             <br />
@@ -77,7 +77,23 @@
 
             <div class="form-group-lg">
                 @Html.LabelFor(m => m.SkillsNeeded, new { @class = "col-md-6 control-label" })
-                @Html.TextBoxFor(m => m.SkillsNeeded, new { @class = "form-control" })
+                @Html.TextAreaFor(m => m.SkillsNeeded, new { @class = "form-control" })
+            </div>
+
+            <br />
+            <br />
+
+            <div class="form-group-lg">
+                @Html.LabelFor(m => m.GitHubUrl, new { @class = "col-md-6 control-label" })
+                @Html.TextAreaFor(m => m.GitHubUrl, new { @class = "form-control" })
+            </div>
+
+            <br />
+            <br />
+
+            <div class="form-group-lg">
+                @Html.LabelFor(m => m.ProjectUrl, new { @class = "col-md-6 control-label" })
+                @Html.TextAreaFor(m => m.ProjectUrl, new { @class = "form-control" })
             </div>
 
             <br />
